changed frontend folder to static

--- a/static/merge.html
+++ b/static/merge.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom Css -->
-    <link rel="stylesheet" href="./css/landing.css">
-    <link rel="stylesheet" href="./css/mobile-landing.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/rec.css">
+    <link rel="stylesheet" href="./static/css/landing.css">
+    <link rel="stylesheet" href="./static/css/mobile-landing.css">
+    <link rel="stylesheet" href="./static/css/main.css">
+    <link rel="stylesheet" href="./static/css/rec.css">
 
     <!-- Js Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -89,6 +89,8 @@
             </div>
             <div class=" info col-lg-5 col-md-12 g-0 ">
                 <div id= 'info'></div>
+                <div><button id="sign-up">Sign Up</button><button id="continue">Continue</button></div>
+                
             </div>
         </div>
         
@@ -99,8 +101,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha512-0xrMWUXzEAc+VY7k48pWd5YT6ig03p4KARKxs4Bqxb9atrcn2fV41fWs+YXTKb8lD2sbPAmZMjKENiyzM/Gagw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<script src="./js/landing-animation.js"></script>
-<script src="./js/landing-nav.js"></script>
-<script src="./js/main.js"></script>
+<script src="./static/js/landing-animation.js"></script>
+<script src="./static/js/landing-nav.js"></script>
+<script src="./static/js/main.js"></script>
 </body>
 </html>
