--- a/attendanceapp/static/merge.html
+++ b/attendanceapp/static/merge.html
@@ -93,7 +93,7 @@
                     <div>
                         Name: Unknown
                         <br>
-                        <a href="https://www.msuaiclub.com"><button onclick = 'window.location.href=www.msuaiclub.com' id="sign-up">Sign Up</button></a><button id="continue">Continue</button>
+                        <a id="link" href="https://www.msuaiclub.com"><button onclick = 'window.location.href=www.msuaiclub.com' id="sign-up">Sign Up</button></a><button id="continue">Continue</button>
                     </div>
                     
                 </div>
