changes in main.js and merge.html

--- a/attendanceapp/static/merge.html
+++ b/attendanceapp/static/merge.html
@@ -91,7 +91,7 @@
                 <div id= 'info'></div>
                 <div id='name-unkown-box'>
                     <div>
-                        Name: Unknown
+                        Name: <span class='name-display'>Unknown</span> 
                         <br>
                         <a id="link" href="https://www.msuaiclub.com"><button onclick = 'window.location.href=www.msuaiclub.com' id="sign-up">Sign Up</button></a><button id="continue">Continue</button>
                     </div>
