redoing main.js

--- a/attendanceapp/static/merge.html
+++ b/attendanceapp/static/merge.html
@@ -110,6 +110,6 @@
 
 <script src="./js/landing-animation.js"></script>
 <script src="./js/landing-nav.js"></script>
-<script src="./js/main-backup.js"></script>
+<script src="./js/main-redo.js"></script>
 </body>
 </html>
