Modifying links and text

--- a/attendanceapp/static/merge.html
+++ b/attendanceapp/static/merge.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MSU AICLUB: Face Recognition</title>
 
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -43,10 +43,18 @@
             </div>
             <div class="nav-list">
                 <ul>
-                    <li>Home</li>
-                    <li>Skills</li>
-                    <li>Services</li>
-                    <li>Contact</li>
+                    <li>
+                        <a href="http://msuaiclub.com">Home</a>
+                    </li>
+                    <li>
+                        <a href="http://">About</a>
+                    </li>
+                    <li>
+                        <a href="http://">Team</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/MSU-AI/Attendance-Project">Source</a>
+                    </li>
                 </ul>
             </div>
         
@@ -60,12 +68,11 @@
             <div class="header-row hero">
                 <div class="des-col des-col-1">
                     <h1>Facial <br> Recognition </h1>
-                    <p>Lorem ipsum is placeholder text commonly used in the 
-                        graphic, print, and publishing industries for previewing 
-                        layouts and visual mockups.Lorem ipsum is placeholder 
-                        text commonly used in the graphic, print, and publish
-                        ing industries for previewing layouts and visual mockups.</p>
-                    <button class="ctn">Text</button>    
+                    <p>The A.I. Club at MSU has built and launched an original application that is able to recognize 
+                        and identify faces on the fly by making use of state-of-the-art technologies in Artificial Intelligence. 
+                        This project is intended to help automate and smooth workflows that involve personal authentication or 
+                        registration while keeping a contactless and efficient interaction.</p>
+                    <button class="ctn">Try it</button>    
                 </div>
                 <div class="des-col des-col-2">
                     <div class="hero-img">
