Adding team members page

--- a/attendanceapp/static/merge.html
+++ b/attendanceapp/static/merge.html
@@ -50,7 +50,7 @@
                         <a href="http://">About</a>
                     </li>
                     <li>
-                        <a href="http://">Team</a>
+                        <a href="./team-index.html">Team</a>
                     </li>
                     <li>
                         <a href="https://github.com/MSU-AI/Attendance-Project">Source</a>
